@@ -2,6 +2,7 @@ official changelog for ephFrame
 ===========================================================================
 
 2009-09-28
++	Fixed String::prepend to use conditional string correctly
 +	moved ephFrame path decision from index.php ino ephFrame.php
 +	Added AppHelper class
 + 	Added /console/console.php script that loads console tasks
